fixed spacing on about section

--- a/portfolio.css
+++ b/portfolio.css
@@ -406,7 +406,7 @@ h3 {
 
 .about-section {
 	display: grid;
-	grid-template-rows: 1fr 2fr 2fr;
+	grid-template-rows: 1fr 3fr 2fr;
 	background: #374c7a;
 	padding: 10vh;
 	color: white;
